<resources>
    <string name="app_name">Admin 2dhp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_product">Product</string>
    <string name="menu_tag">Tag</string>

    <string name="password">Password:</string>
    <string name="password_data">Password data</string>
    <string name="username_data">Username data</string>
    <string name="username">Username:</string>
    <string name="address_user">Address:</string>
    <string name="address_data">Address data</string>
    <string name="phone_user">Phone:</string>
    <string name="phone_data">Phone data</string>
    <string name="email_user">Email:</string>
    <string name="email_data">Email data</string>
    <string name="image_user">Image User</string>
    <string name="image_product">Image Product</string>
    <string name="id_user">ID User:</string>
    <string name="id_ram">ID Ram:</string>
    <string name="id_product">ID Product:</string>
    <string name="id_data">Id data</string>
    <string name="name_user">Name:</string>
    <string name="name_data">Name data</string>
    <string name="birthday">Birthday:</string>
    <string name="birthday_data">Birthday data</string>
    <string name="gender">Gender:</string>
    <string name="gender_data">Gender data</string>
    <string name="permission">Permission:</string>
    <string name="permission_data">Permission data</string>
    <string name="active">Active:</string>
    <string name="active_data">Active data</string>
    <string name="btn_edit_user">Edit User</string>
    <string name="btn_edit_product">Edit Product</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete_user">Delete User</string>
    <string name="btn_delete">Delete</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="price_data">Price data</string>
    <string name="storage_data">Storage data</string>
    <string name="sale">Sale:</string>
    <string name="sale_data">Sale data</string>
    <string name="storage">Storage:</string>
    <string name="btn_view_description">Description</string>
    <string name="status_data">Status data</string>
    <string name="status">Status:</string>
    <string name="rear_camera_data">Rear camera data</string>
    <string name="rear_camera">Rear camera</string>
    <string name="front_camera_data">Front camera data</string>
    <string name="front_camera">Front camera</string>
    <string name="screen_data">Screen data</string>
    <string name="screen">Screen</string>
    <string name="guarantee_data">Guarantee data</string>
    <string name="guarantee">Guarantee</string>
    <string name="battery_data">Battery data</string>
    <string name="battery">Battery:</string>
    <string name="rom_data">Rom data</string>
    <string name="rom">Rom</string>
    <string name="ram_data">Ram data</string>
    <string name="ramRomBattery">Ram:</string>
    <string name="edit_user">Edit User</string>
    <string name="id_rom">ID Rom:</string>
    <string name="id_pin">ID Pin:</string>
    <string name="id_price">ID Price:</string>
    <string name="menu_brand">Brand</string>
    <string name="image_brand">Image Brand</string>
    <string name="menu_sale">Sale</string>
    <string name="id_brand">ID Brand:</string>
    <string name="id_sale">ID Sale:</string>
    <string name="sale_sale">Discount:</string>
    <string name="daystart_sale">Day Start:</string>
    <string name="daystart_data">Day Start data</string>
    <string name="dayend_sale">Day End:</string>
    <string name="dayend_data">Day End data</string>
    <string name="menu_slide">Slide</string>
    <string name="menu_comment">Comment</string>
    <string name="id_slide">ID Slide: </string>
    <string name="image_slide">Image Slide</string>
    <string name="id_comment">ID Comment:</string>
    <string name="comment_comment">Comment:</string>
    <string name="comment_data">Comment data</string>
    <string name="iduser_comment">ID User:</string>
    <string name="productname_data">Product Name data</string>
    <string name="productname_comment">Product Name:</string>
    <string name="menu_order">Order</string>
    <string name="menu_order2">Order 2</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

</resources>