<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linear_layout_userrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgView_user"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/image_user"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_idtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/id_user"
                        android:textAlignment="viewStart" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_iduser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="8"
                        android:text="@string/id_data"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_nametitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/name_user"
                        android:textAlignment="viewStart" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_nameuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="8"
                        android:text="@string/name_data"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_emailtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/email_user"
                        android:textAlignment="viewStart" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_emailuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="8"
                        android:text="@string/email_data"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_phonetitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/phone_user"
                        android:textAlignment="viewStart" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_phoneuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/phone_data"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_addresstitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/address_user"
                        android:textAlignment="viewStart" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_addressuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/address_data"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/expandable_data_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_usernametitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/username" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_usernameuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/username_data" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_passwordtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/password" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_passworduser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/password_data" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_birthdaytitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/birthday" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_birthdayruser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/birthday_data" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_gendertitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/gender" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_genderuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/gender_data" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_quyentitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/permission" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_quyenuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/permission_data" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_activetitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:padding="4dp"
                        android:text="@string/active" />

                    <TextView  android:clickable="false"
                        android:id="@+id/textView_activeuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="4dp"
                        android:text="@string/active_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">


                    <Button
                        android:id="@+id/button_edituser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/btn_edit_user" />

                    <Button
                        android:id="@+id/button_deleteuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/btn_delete_user" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

