<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/adminnav_home">

    <fragment
        android:id="@+id/adminnav_home"
        android:name="vn.nlu.android.admin.adminUI.adminhome.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/admin_fragment_home" />

    <fragment
        android:id="@+id/adminnav_user"
        android:name="vn.nlu.android.admin.adminUI.user.AdminFragment_User"
        android:label="@string/menu_user"
        tools:layout="@layout/admin_fragment_user" />

    <fragment
        android:id="@+id/adminnav_product"
        android:name="vn.nlu.android.admin.adminUI.product.AdminFragment_Product"
        android:label="@string/menu_product"
        tools:layout="@layout/admin_fragment_product" />

</navigation>