<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linear_layout_pricerow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_idtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:singleLine="true"
                    android:text="@string/id_price"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView_idprice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="8"
                    android:clickable="false"
                    android:text="@string/id_data"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_storagetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:singleLine="true"
                    android:text="@string/storage"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView_storageprice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="8"
                    android:clickable="false"
                    android:text="@string/storage_data"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_activetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:singleLine="true"
                    android:text="@string/active"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView_activeprice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="8"
                    android:clickable="false"
                    android:text="@string/active_data"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/expandable_data_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">


                <Button
                    android:id="@+id/button_editprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn_edit"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_deleteprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:text="@string/btn_delete"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

